<resources>
    <string name="anchors_desc">To make the SUDS scale fit you, your therapist will ask you what situations represent different levels on the scale.</string>
    <string name="anchors_saved">Your anchors for these different SUDS levels are saved and available in the Toolbox section.</string>
    <string name="clinicians_guide_url">http://docs.google.com/viewer?url=http://t2health.org/sites/default/files/mobile_apps/pe-coach/PE-Coach_Clinical-Guidelines_Android_02.pdf</string>
    <string name="incoming_call_warning">Recording will be automatically stopped during phone calls. You will have to return to this screen to restart the recording after taking a call.</string>
    <string name="navigation_next">Next Session</string>
    <string name="goto_session">Go to Session...</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="pause">Pause/Stop</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="record">Record</string>
    <string name="finish">Finish</string>
    <string name="loading">Loading...</string>
    <string name="add">Add</string>
    <string name="ok">Okay</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="split_two">Split Session 2</string>
    <string name="split_two_desc">Divide Session two into 60 minute halves.</string>
    <string name="video_button_text">Watch Video</string>
    <string name="text_button_text">Read Text</string>
    <string name="could_not_play_video">Could not play video.</string>
    <string name="no_conenction_message">You must have an active internet connection to play this resource.</string>
    <string name="session_still_recording">Alert! The session is still being recorded.</string>
    <string name="complete">Complete</string>
    <string name="pre">Pre</string>
    <string name="post">Post</string>
    <string name="peak">Peak</string>
    <string name="suds">SUDS</string>
    <string name="suds_rating">SUDS Rating</string>
    <string name="pre_desc">Pre Rating</string>
    <string name="post_desc">Post Rating</string>
    <string name="peak_desc">Peak Raing</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="save_and_view_event">Save and View Event</string>
    <string name="security">Password Protect App</string>
    <string name="send_anon_data">Send Anonymous Usage Data</string>
    <string name="send_anon_data_desc">Allow developers to determine how this App is being used.</string>
    <string name="goto_next_session">Next Session</string>
    <string name="goto_session_homework">Session Homework</string>
    <string name="confirm_app_exit">Are you sure you want to exit?</string>
    <string name="add_edit_invivo_activity_title">Add/Edit In Vivo Hierarchy and SUDS Ratings</string>
    <string name="add_edit_invivo_item_activity_title">Add/Edit In Vivo SUDS Item</string>
    <string name="add_edit_rating_activity_title">Add/Edit SUDS Rating</string>
    <string name="breathing_menu_activity_title"></string>
    <string name="breathing_practice_activity_title"></string>
    <string name="choose_invivo_scenarios_activity_title"></string>
    <string name="common_reactions_to_trauma_activity_title">Common Reactions To Trauma</string>
    <string name="compare_invivo_ratings_activity_title">Compare SUDS</string>
    <string name="complete_activity_title"></string>
    <string name="contact_manager_activity_title"></string>
    <string name="explination_of_pe_theory_activity_title">Explanation of PE Therapy</string>
    <string name="final_session_activity_title"></string>
    <string name="forgot_pin_activity_title"></string>
    <string name="group_list_activity_title"></string>
    <string name="homework_activity_title">Session {0} Homework</string>
    <string name="login_activity_title"></string>
    <string name="invivo_exposure_selector_activity_title">Select In Vivo Item</string>
    <string name="invivo_exposure_assignment_activity_title">In Vivo Exposure Assignment</string>
    <string name="main_preference_activity_title"></string>
    <string name="pcl_assessment_question_activity_title">PCL Assessment Question</string>
    <string name="pcl_assessments_activity_title">PCL Assessment</string>
    <string name="pcl_reports_activity_title">Compare all PCLs</string>
    <string name="play_imaginal_exposure_activity_title"></string>
    <string name="play_recording_activity_title"></string>
    <string name="play_session_recording_activity_title"></string>
    <string name="rate_invivo_activity_title"></string>
    <string name="rating_list_activity_title"></string>
    <string name="record_session_activity_title">Record Session</string>
    <string name="review_homework_activity_title"></string>
    <string name="security_activity_title"></string>
    <string name="session_activity_title">Session {0} Activities</string>
    <string name="splash_activity_title">Starting PE Coach</string>
    <string name="text_video_tab_activity_title"></string>
    <string name="toolbox_activity_title">Toolbox</string>
    <string name="unlock_activity_title"></string>
    <string name="webview_activity_title"></string>
    <string name="pre_suds_rating_desc">Pre SUDS rating</string>
    <string name="post_suds_rating_desc">Post SUDS rating</string>
    <string name="enter_final_suds_rating">Enter Final SUDS Rating</string>
    <string name="new_suds_rating">New SUDS rating</string>
    <string name="item_saved">Item Saved</string>
    <string name="accessibility_toast_prefix">Toast Dialog: </string>
    <string name="select_for_more_details">Select item for more details.</string>
    <string name="add_edit_invivo_activity_instructions">Choose an item in the list below to edit. You may add a new In Vivo item by clicking the "add" button.</string>
    <string name="add_edit_invivo_empty_list">You first need to add to your Invivo hierarchy.</string>
    <string name="pace_slower">Slow Down</string>
    <string name="pace_faster">Speed Up</string>
    <string name="manage_application">Manage Application</string>
    <string name="fill_out_all_security_fields">Fill out all the fields.</string>
    <string name="homework_continue_disabled_message">You must use a homework item before you can continue.</string>
    <string name="session_continue_disabled_message">You must use a session item before you can continue.</string>
    <string name="security_title">Security</string>
    <string name="security_desc">Force the use of a password when loading the app.</string>
    <string name="security_enabled">Security Enabled</string>
    <string name="security_pin">Pin</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="cannot_record_sdcard_not_ready">You will be unable to record this session because your SD card is not ready.</string>
    <string name="cannot_play_sdcard_not_ready">You will be unable to play this session because your SD card is not ready.</string>
    <string name="calendar_event_title">PE Appointment</string>
    <string name="rating_range_error">All ratings need to be between 0-100.</string>
    <string name="imaginal_exposure_suds">Enter Imaginal Exposure Ratings</string>
    <string name="currently_select_contact">Currently selected contact:</string>
    <string name="no_contact_associated">No contact is currently associated</string>
    <string name="view_contact">View Contact</string>
    <string name="contacts_use_buttons_instructions">Use the buttons below to associate a contact with your Therapy.</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="add_new_contact">Add New Contact</string>
    <string-array name="pcl_questions">
        <item>Repeated, disturbing memories, thoughts, or images of a stressful military experience?</item>
        <item>Repeated, disturbing dreams of a stressful military experience?</item>
        <item>Suddenly acting or feeling as if a stressful military experience were happening again (as if you were reliving it)?</item>
        <item>Feeling very upset when something reminded you of a stressful military experience?</item>
        <item>Having physical reactions (e.g. heart pounding, trouble breathing, sweating) when something reminded you of a stressful military experience?</item>
        <item>Avoiding thinking about or talking about a stressful military experience or avoiding having feelings related to it?</item>
        <item>Avoiding activities or situations because they reminded you of a stressful military experience?</item>
        <item>Trouble remembering important parts of a stressful military experience?</item>
        <item>Loss of interest in activities that you used to enjoy?</item>
        <item>Feeling distant or cut off from other people?</item>
        <item>Feeling emotionally numb or being unable to have loving feelings for those close to you?</item>
        <item>Feeling as if your future will somehow be cut short?</item>
        <item>Trouble falling or staying asleep?</item>
        <item>Feeling irritable or having angry outbursts?</item>
        <item>Having difficulty concentrating?</item>
        <item>Being super alert or watchful or on guard?</item>
        <item>Feeling jumpy or easily startled?</item>
    </string-array>
    <string-array name="pcl_answers">
        <item>1 - Not at all</item>
        <item>2 - A little bit</item>
        <item>3 - Moderately</item>
        <item>4 - Quite a bit</item>
        <item>5 - Extremely</item>
    </string-array>
    <string name="pcl_instruction_alert">Following is a list of problems and complaints that people sometimes have in response to stressful life experiences.  Please read each one carefully, then select the response that best indicates how much you have been bothered by that problem IN THE PAST MONTH.</string>
    <string name="mark_imaginal_exposure">Mark Imaginal Exposure</string>
    <string name="mark_imaginal_exposure_on">End Imaginal Exposure Portion</string>
    <string name="mark_imaginal_exposure_off">Begin Imaginal Exposure Portion</string>
    <string name="pcl_assessments">PCL Assessment</string>
    <string name="record_session">Record Session</string>
    <string name="appointments_and_reminders">Schedule Next Appointment</string>
    <string name="choose_homework_scenarios">Choose current In Vivo Homework Items</string>
    <string name="create_invivo_and_suds">Create In Vivo Hierarchy and SUDS Ratings</string>
    <string name="review_homework_from_previous">Review Homework from Previous Session</string>
    <string name="review_homework">Review Homework from Previous Session</string>
    <string name="review_pe_therapy">Listen to Explanation of PE Therapy?</string>
    <string name="review_common">Listen to Common Reactions to Trauma?</string>
    <string name="review_breathing">Practice Breathing Retrainer?</string>
    <string name="review_session">Listen to Entire Session Recording?</string>
    <string name="toolbox">Toolbox</string>
    <string name="contact_info">Therapist Contact Information</string>
    <string name="breath_retrainer_practice">Practice</string>
    <string name="review_previe">Review Imaginal Exposure Homework</string>
    <string name="review_invivo">Review Added In Vivo Items</string>
    <string name="review_vivo_homework">Review In Vivo Homework</string>
</resources>