<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/micImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:scaleType="centerInside"
        android:src="@drawable/microphone" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15px"
        android:text="@string/incoming_call_warning"
        android:textSize="16sp"
        android:visibility="visible" />

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/record_media_controls" />

    <LinearLayout
        android:id="@+id/imaginal_exposure_button_wrappper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/markimgexp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mark_imaginal_exposure"
            android:textOff="@string/mark_imaginal_exposure_off"
            android:textOn="@string/mark_imaginal_exposure_on" />
    </LinearLayout>

</LinearLayout>