<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contact_info"
		style="@style/headerText" />

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingRight="10dip"
		android:layout_weight="1.0">

		<TextView
			android:id="@+id/noContactMessage"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:text="@string/no_contact_associated"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:focusable="true" />

		<LinearLayout
			android:id="@+id/contactBlock"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:visibility="gone"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/currently_select_contact"
					android:textAppearance="@android:style/TextAppearance.Medium" />
	
				<TextView
					android:id="@+id/contactName"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:textAppearance="@android:style/TextAppearance.Medium"
					android:text="Contact Name" />
			</LinearLayout>

			<Button
				android:id="@+id/viewButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/view_contact"
				android:focusable="true" />
		</LinearLayout>
	</FrameLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/contacts_use_buttons_instructions"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:focusable="true" />
		<Button
			android:id="@+id/chooseExistingButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="Choose Contact" />

		<Button
			android:id="@+id/addNewButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_new_contact" />
	</LinearLayout>
</LinearLayout>
