<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout
		android:id="@+id/navigationContent"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/navigationToolbar"
		android:layout_width="fill_parent"
		android:gravity="center_vertical"
		android:layout_height="48dip"
		android:background="#FFbed4b9"
		android:paddingTop="2dip">
		
		<ImageButton
			android:id="@+id/navigationBackButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/pe_back_btn"
			android:contentDescription="@string/back" />
			
		<ImageButton
			android:id="@+id/navigationToolboxButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/pe_tools"
			android:contentDescription="@string/toolbox" />
			
		<View
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0" />
		
		<Button
			android:id="@+id/navigationExtraButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="72dip"
			android:visibility="gone" />
		
		<Button
			android:id="@+id/navigationRightButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="72dip"
			android:text="@string/navigation_next" />
	</LinearLayout>
</LinearLayout>
